@@ -1,3 +1,7 @@
+2005-05-30  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* S_scheme_fields.h: Fix Planar plotting.
+
 2005-05-27  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* interface.h: Add interface routines with complex conjugate.
